--- a/health/ont.healthmeasurement/pom.xml
+++ b/health/ont.healthmeasurement/pom.xml
@@ -4,12 +4,12 @@
   	<parent>
     		<groupId>org.universAAL.ontology</groupId>
     		<artifactId>ont.pom</artifactId>
-    		<version>1.1.1-SNAPSHOT</version>
+    		<version>1.2.1-SNAPSHOT</version>
     		<relativePath>../pom/</relativePath>
 	</parent>
   	
   	<artifactId>ont.healthmeasurement</artifactId>
-  	<version>1.1.1-SNAPSHOT</version>
+  	<version>1.2.1-SNAPSHOT</version>
   	<name>HealthMeasurement</name>
  	<description>org.eclipse.uml2.uml.internal.impl.CommentImpl@e1728c (body: null)</description>
  	<properties>
@@ -27,11 +27,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.data.representation</artifactId>
+				<artifactId>mw.data.representation.core</artifactId>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.bus.service</artifactId>
+				<artifactId>mw.bus.service.core</artifactId>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
@@ -51,7 +51,6 @@
 					<configuration>
 						<instructions>
 							<Bundle-Name>${project.name}</Bundle-Name>
-							<Bundle-Activator>org.universaal.ontology.healthmeasurement.Activator</Bundle-Activator>
 							<Bundle-Description>${project.description}</Bundle-Description>
 							<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 							<Export-Package>org.universaal.ontology.healthmeasurement.owl.*</Export-Package>
