--- a/health/ont.message/pom.xml
+++ b/health/ont.message/pom.xml
@@ -1,24 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-<!-- 	<parent> -->
-<!-- 		<groupId>org.universAAL.ontology</groupId> -->
-<!-- 		<artifactId>ont.pom</artifactId> -->
-<!-- 		<version>1.1.1-SNAPSHOT</version> -->
-<!-- 		<relativePath>../pom/</relativePath> -->
-<!-- 	</parent> -->
+	<parent>
+		<groupId>org.universAAL.ontology</groupId>
+		<artifactId>ont.pom</artifactId>
+		<version>1.2.1-SNAPSHOT</version>
+		<relativePath>../pom/</relativePath>
+	</parent>
 
 <!-- 	Remove when transported to ontologies repo -->
-	<parent>
-		<groupId>org.universAAL.AALapplication</groupId>
-		<artifactId>health.pom</artifactId>
-		<version>B.0.1-SNAPSHOT</version>
-		<relativePath>../health.pom/</relativePath>
-	</parent>
+<!-- 	<parent> -->
+<!-- 		<groupId>org.universAAL.AALapplication</groupId> -->
+<!-- 		<artifactId>health.pom</artifactId> -->
+<!-- 		<version>B.0.1-SNAPSHOT</version> -->
+<!-- 		<relativePath>../health.pom/</relativePath> -->
+<!-- 	</parent> -->
+	<dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.health</artifactId>
+			<version>1.2.1-SNAPSHOT</version>
+		</dependency>
+		</dependencies>
+	</dependencyManagement>
 	
-	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.message</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.2.1-SNAPSHOT</version>
 	<name>MessageOntology</name>
 	<description>No further description provided</description>
 	<packaging>bundle</packaging>
@@ -34,11 +42,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
+			<artifactId>mw.data.representation.core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
+			<artifactId>mw.bus.service.core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -78,7 +86,6 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universaal.ontology.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Bundle-Version>${project.version}</Bundle-Version>
