--- a/health/ont.questionnaireStrategy/pom.xml
+++ b/health/ont.questionnaireStrategy/pom.xml
@@ -2,24 +2,32 @@
  
   <modelVersion>4.0.0</modelVersion>
   
-<!--   <parent> -->
-<!--     		<groupId>org.universAAL.ontology</groupId> -->
-<!--     		<artifactId>ont.pom</artifactId> -->
-<!--     		<version>1.1.1-SNAPSHOT</version> -->
-<!--     		<relativePath>../pom/</relativePath> -->
-<!-- 	</parent> -->
+  <parent>
+    		<groupId>org.universAAL.ontology</groupId>
+    		<artifactId>ont.pom</artifactId>
+    		<version>1.2.1-SNAPSHOT</version>
+    		<relativePath>../pom/</relativePath>
+	</parent>
 
 <!-- 	Remove when transported to ontolgies repo -->
-	<parent>
-		<groupId>org.universAAL.AALapplication</groupId>
-		<artifactId>health.pom</artifactId>
-		<version>B.0.1-SNAPSHOT</version>
-		<relativePath>../health.pom/</relativePath>
-	</parent>
+<!-- 	<parent> -->
+<!-- 		<groupId>org.universAAL.AALapplication</groupId> -->
+<!-- 		<artifactId>health.pom</artifactId> -->
+<!-- 		<version>C.0.1-SNAPSHOT</version> -->
+<!-- 		<relativePath>../health.pom/</relativePath> -->
+<!-- 	</parent> -->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.universAAL.ontology</groupId>
+      			<artifactId>ont.health</artifactId>
+      			<version>1.2.1-SNAPSHOT</version>
+    		</dependency>
+		</dependencies>
+	</dependencyManagement>
 	
-  <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.questionnaireStrategy</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.2.1-SNAPSHOT</version>
 	<name>QuestionnaireStrategyOntology</name> 
  <packaging>bundle</packaging>
  
@@ -38,12 +46,12 @@
 			
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
+			<artifactId>mw.data.representation.core</artifactId>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.ui</artifactId>
+			<artifactId>mw.bus.ui.core</artifactId>
 		</dependency>
 	
 		<dependency>
@@ -77,7 +85,6 @@
 					<configuration>
 						<instructions>
 							<Bundle-Name>${project.name}</Bundle-Name>
-							<Bundle-Activator>org.universaal.ontology.Activator</Bundle-Activator>
 							<Bundle-Description>${project.description}</Bundle-Description>
 							<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 							<Export-Package>org.universaal.ontology.owl.*</Export-Package>
