--- a/long_term_behav/ont.ltba/pom.xml
+++ b/long_term_behav/ont.ltba/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<artifactId>ont.pom</artifactId>
 		<groupId>org.universAAL.ontology</groupId>
-		<version>1.1.0</version>
+		<version>1.2.0</version>
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>ont.ltba</artifactId>
-	<version>B.0.2-SNAPSHOT</version>
+	<version>C.0.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>LTBA ontology.</name>
 	<description>The Long Term Behaviour Analyzer Ontologies</description>
@@ -42,13 +42,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universaal.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
-			<version>1.1.0</version>
+			<artifactId>mw.data.representation.osgi</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universaal.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
-			<version>1.1.0</version>
+			<artifactId>mw.bus.service.osgi</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 	</dependencies>
 </project>
