--- a/nutritional/nutritional.uiclient.basic/pom.xml
+++ b/nutritional/nutritional.uiclient.basic/pom.xml
@@ -6,10 +6,9 @@
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>new_services.pom</artifactId>
 		<version>B.0</version>
-		<relativePath>../../pom</relativePath>
+		<relativePath>../../new_services.pom</relativePath>
 	</parent>
   
-  <groupId>org.universAAL.AALapplication</groupId>
   <artifactId>nutritional.uiclient.basic</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
@@ -19,48 +18,39 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			<version>1.0.1</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.model</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.container.xfaces</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.container.osgi</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.ui</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+			</dependency>
 		
 		<!--  start hector -->
 		<dependency>
@@ -85,11 +75,12 @@
 			<version>1.4.1</version>
 		</dependency>
 
-		<dependency>
+<!--  	<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
 			<version>5.1.1</version>
 		</dependency>
+-->
 
 		<dependency>
 			<groupId>commons-discovery</groupId>
