--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ help_when_out/hwo.servlet/.project
 help_when_out/hwo.servlet/target
 new_services.pom/.project
 new_services.pom/.settings
+nutritional/target
