--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,8 @@ help_when_out/hwo.servlet/target
 new_services.pom/.project
 new_services.pom/.settings
 nutritional/nutritional.democlient/target
+nutritional/nutritional.ontology/.classpath
+nutritional/nutritional.ontology/.project
+nutritional/nutritional.ontology/.settings
+nutritional/nutritional.ontology/target
 nutritional/target
