--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ nutritional/nutritional.ontology/.classpath
 nutritional/nutritional.ontology/.project
 nutritional/nutritional.ontology/.settings
 nutritional/nutritional.ontology/target
+nutritional/nutritional.simulator/target
 nutritional/target
