--- a/aal_eficiency/AALfficiencyService/pom.xml
+++ b/aal_eficiency/AALfficiencyService/pom.xml
@@ -3,10 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-	<groupId>org.universAAL.AALapplication</groupId>
-    <artifactId>new_services.pom</artifactId>
-    <version>C.0</version>
-	</parent>
+    <groupId>org.universAAL.support.samples</groupId>
+    <artifactId>samples.pom</artifactId>
+    <version>1.2.1-SNAPSHOT</version>
+    <relativePath>../samples.pom</relativePath>
+  	</parent>
+  	<groupId>org.universAAL.AALapplication</groupId>
 	<packaging>bundle</packaging>
 	<artifactId>AALfficiencyService</artifactId>
 	<version>1.2.3-SNAPSHOT</version>
@@ -25,6 +27,16 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.aalfficiencyscores</artifactId>
 			<version>1.2.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.readenergy</artifactId>
+			<version>1.2.1-SNAPSHOT</version>
+		</dependency>
+		    	<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.20</version>
 		</dependency>
 		</dependencies>
 
