--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,18 @@ agenda/agenda.server/.settings
 agenda/agenda.server/target
 food_shopping/pom/.project
 food_shopping/pom/.settings
+health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.classpath
+health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.project
+health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.settings
+health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/target
+health/PhysicalActivityMonitorModule/app.biomedicalsensors.uiclient/.classpath
+health/PhysicalActivityMonitorModule/app.biomedicalsensors.uiclient/.project
+health/PhysicalActivityMonitorModule/app.biomedicalsensors.uiclient/.settings
+health/PhysicalActivityMonitorModule/app.biomedicalsensors.uiclient/target
+health/PhysicalActivityMonitorModule/ont.biomedicalsensors/.classpath
+health/PhysicalActivityMonitorModule/ont.biomedicalsensors/.project
+health/PhysicalActivityMonitorModule/ont.biomedicalsensors/.settings
+health/PhysicalActivityMonitorModule/ont.biomedicalsensors/target
 health/health.manager/.classpath
 health/health.manager/.project
 health/health.manager/.settings
