--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -55,6 +55,7 @@
 		      <plugin>
 		        <groupId>org.universAAL.support</groupId>
 		        <artifactId>uaal-maven-plugin</artifactId>
+		        <version>1.2.1-SNAPSHOT</version>
 		      </plugin>
 		      <plugin>
 		        <groupId>org.codehaus.mojo</groupId>
@@ -72,7 +73,7 @@
 	  	<dependency>
 	  		<groupId>org.universAAL.context</groupId>
 	  		<artifactId>ctxt.che</artifactId>
-	  		<version>1.1.0</version>
+	  		<version>1.2.0</version>
             <!--
             <scope>provided</scope>
             -->
@@ -80,7 +81,7 @@
         <dependency>
         	<groupId>org.universAAL.context</groupId>
             <artifactId>ctxt.prof.server</artifactId>
-	  		<version>1.1.0</version>
+	  		<version>1.2.0</version>
             <!--
             <scope>provided</scope>
             -->
