--- a/nutritional/nutritional.pom/pom.xml
+++ b/nutritional/nutritional.pom/pom.xml
@@ -12,7 +12,7 @@
 	
 		
 	<artifactId>nutritional.pom</artifactId>
-	<version>B.0.1-SNAPSHOT</version>
+	<version>B.0.1</version>
 	<name>Nutritional Advisor AAL Service</name>
 	<packaging>pom</packaging>
 	
