--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ nutritional/nutritional.ontology/.classpath
 nutritional/nutritional.ontology/.project
 nutritional/nutritional.ontology/.settings
 nutritional/nutritional.ontology/target
+nutritional/nutritional.pom/.project
+nutritional/nutritional.pom/.settings
 nutritional/nutritional.simulator/target
 nutritional/nutritional.uiclient.basic/.classpath
 nutritional/nutritional.uiclient.basic/.project
