--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ help_when_out/hwo.servlet/target
 new_services.pom/.project
 new_services.pom/.settings
 nutritional/nutritional.democlient/target
+nutritional/nutritional.ontology/.classpath
+nutritional/nutritional.ontology/.project
+nutritional/nutritional.ontology/.settings
+nutritional/nutritional.ontology/target
 nutritional/nutritional.pom/.project
 nutritional/nutritional.pom/.settings
 nutritional/nutritional.simulator/target
