--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,11 @@ agenda/agenda.server/.classpath
 agenda/agenda.server/.project
 agenda/agenda.server/.settings
 agenda/agenda.server/target
+food_shopping/food_shopping.service.client/*.classpath
+food_shopping/food_shopping.service.client/*.project
+food_shopping/food_shopping.service.client/*.settings
+food_shopping/food_shopping.service.client/.settings
+food_shopping/food_shopping.service.client/target
 health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.classpath
 health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.project
 health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/.settings
