--- a/nutritional/nutritional.uiclient.basic/pom.xml
+++ b/nutritional/nutritional.uiclient.basic/pom.xml
@@ -1,58 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-    
-  <parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>nutritional.pom</artifactId>
-		<version>B.0.1</version>
+		<version>C.0.1-SNAPSHOT</version>
 		<relativePath>../nutritional.pom</relativePath>
 	</parent>
-  
-  <artifactId>nutritional.uiclient.basic</artifactId>
-  <version>B.0.1</version>
-  <packaging>bundle</packaging>
 
-  
-  <dependencies>
+	<artifactId>nutritional.uiclient.basic</artifactId>
+	<version>C.0.1-SNAPSHOT</version>
+	<packaging>bundle</packaging>
+
+	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation</artifactId>
-			</dependency>
+			<artifactId>mw.data.representation.osgi</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.model</artifactId>
-			</dependency>
+			<artifactId>mw.bus.model.osgi</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.container.xfaces</artifactId>
-			</dependency>
+			<artifactId>mw.container.xfaces.osgi</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.container.osgi</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context</artifactId>
-			</dependency>
+			<artifactId>mw.bus.context.osgi</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.ui</artifactId>
-			</dependency>
+			<artifactId>mw.bus.ui.osgi</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service</artifactId>
-			</dependency>
+			<artifactId>mw.bus.service.osgi</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
-			</dependency>
-		
-		<!--  start hector -->
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.nutrition</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>medication.manager.ont</artifactId>
+			<version>1.1.1-SNAPSHOT</version> <!-- TODO: Change this to 1.2.0 when available -->
+		</dependency>
+
+		<!-- Nutritional own libs -->
 		<dependency>
 			<groupId>axis</groupId>
 			<artifactId>axis-pax</artifactId>
@@ -68,39 +78,26 @@
 			<artifactId>miglayout</artifactId>
 			<version>3.7.4</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.1</version>
 		</dependency>
-
-<!--  	<dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>itextpdf</artifactId>
-			<version>5.1.1</version>
-		</dependency>
--->
-
 		<dependency>
 			<groupId>commons-discovery</groupId>
 			<artifactId>commons-discovery</artifactId>
 			<version>0.5</version>
 		</dependency>
-		<!-- FIN HECTOR -->
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.nutrition</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>medication.manager.ont</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
-		</dependency>
-    </dependencies>
-  
-  	<build>
+
+		<!-- <dependency> 
+		<groupId>com.itextpdf</groupId> 
+		<artifactId>itextpdf</artifactId> 
+		<version>5.1.1</version> 
+		</dependency> -->
+
+	</dependencies>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
@@ -117,5 +114,5 @@
 			</plugin>
 		</plugins>
 	</build>
-  
+
 </project>
