--- a/medication/medication.manager.ui.runner/runner/felix/config.ini
+++ b/medication/medication.manager.ui.runner/runner/felix/config.ini
@@ -26,8 +26,8 @@ felix.auto.start.1=\
 "file:bundles/org.apache.felix.gogo.runtime_0.10.0.jar" \
 "file:bundles/org.apache.felix.gogo.shell_0.10.0.jar"
 felix.auto.start.5=\
-"file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
-"file:bundles/mw.container.xfaces_1.1.0.jar" \
+"file:bundles/mw.container.xfaces.osgi_1.2.0.jar" \
+"file:bundles/mw.acl.interfaces.osgi_1.2.0.jar" \
 "file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
 "file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
 "file:bundles/org.osgi.compendium_4.1.0.jar" \
@@ -35,48 +35,52 @@ felix.auto.start.5=\
 "file:bundles/org.apache.felix.configadmin_1.2.4.jar" \
 "file:bundles/org.apache.felix.fileinstall_3.1.10.jar" \
 "file:bundles/org.ops4j.pax.configmanager_0.2.2.jar" \
-"file:bundles/mw.container.osgi_1.1.0.jar" \
-"file:bundles/mw.acl.interfaces_1.1.0.jar" \
-"file:bundles/mw.acl.upnp_1.1.0.jar" \
+"file:bundles/org.apache.felix.bundlerepository_1.4.2.jar" \
+"file:bundles/mw.container.osgi_1.2.0.jar" \
+"file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
+"file:bundles/mw.acl.upnp.osgi_1.2.0.jar" \
 "file:bundles/org.apache.felix.upnp.basedriver_0.8.0.jar" \
-"file:bundles/mw.bus.model_1.1.0.jar" \
-"file:bundles/mw.data.representation_1.1.0.jar" \
-"file:bundles/mw.bus.service_1.1.0.jar" \
-"file:bundles/mw.bus.context_1.1.0.jar" \
-"file:bundles/mw.bus.ui_1.1.0.jar" \
-"file:bundles/mw.data.serialization_1.1.0.jar" \
+"file:bundles/mw.bus.model.osgi_1.2.0.jar" \
+"file:bundles/mw.data.representation.osgi_1.2.0.jar" \
+"file:bundles/mw.bus.service.osgi_1.2.0.jar" \
+"file:bundles/mw.bus.context.osgi_1.2.0.jar" \
+"file:bundles/mw.bus.ui.osgi_1.2.0.jar" \
+"file:bundles/mw.data.serialization.osgi_1.2.0.jar" \
 "file:bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
-"file:bundles/ont.phWorld_1.1.0.jar" \
-"file:bundles/ont.av_1.1.0.jar" \
-"file:bundles/ont.device.extra_1.1.0.jar" \
-"file:bundles/ont.furniture_1.1.0.jar" \
-"file:bundles/ont.profile_1.1.0.jar" \
-"file:bundles/ont.gesture.pointing_1.1.0.jar" \
-"file:bundles/ont.hazard_1.1.0.jar" \
-"file:bundles/ont.impairment_1.1.0.jar" \
-"file:bundles/ont.lighting_1.1.0.jar" \
-"file:bundles/ont.measurement_1.1.0.jar" \
-"file:bundles/ont.medication_1.1.0.jar" \
-"file:bundles/ont.multimedia_1.1.0.jar" \
-"file:bundles/ont.powersocket_1.1.0.jar" \
-"file:bundles/ont.profile.health_1.1.0.jar" \
-"file:bundles/ont.profile.userid_1.1.0.jar" \
-"file:bundles/ont.profile.uipreferences_1.1.0.jar" \
-"file:bundles/ont.risk_1.1.0.jar" \
-"file:bundles/ont.water_1.1.0.jar" \
-"file:bundles/ont.weather_1.1.0.jar" \
-"file:bundles/ont.window_1.1.0.jar" \
-"file:bundles/ont.profile.health_1.0.1.SNAPSHOT.jar" \
-"file:bundles/ont.impairment_1.0.1.SNAPSHOT.jar" \
-"file:bundles/ui.dm.mobile_1.1.0.jar" \
-"file:bundles/ui.handler.gui.swing_1.1.0.jar" \
-"file:bundles/medication.manager.ui_1.1.0.jar" \
-"file:bundles/medication.manager.ont_1.1.1.SNAPSHOT.jar" \
-"file:bundles/medication.missing.services.simulation_1.1.0.jar" \
-"file:bundles/medication.manager.service_1.1.0.jar" \
-"file:bundles/medication.manager.shell.commands_1.1.0.jar"
+"file:bundles/ont.phWorld_1.2.0.jar" \
+"file:bundles/ont.av_1.2.0.jar" \
+"file:bundles/ont.device.extra_1.2.0.jar" \
+"file:bundles/ont.furniture_1.2.0.jar" \
+"file:bundles/ont.profile_1.2.0.jar" \
+"file:bundles/ont.gesture.pointing_1.2.0.jar" \
+"file:bundles/ont.hazard_1.2.0.jar" \
+"file:bundles/ont.impairment_1.2.0.jar" \
+"file:bundles/ont.lighting_1.2.0.jar" \
+"file:bundles/ont.unit_1.2.0.jar" \
+"file:bundles/ont.measurement_1.2.0.jar" \
+"file:bundles/ont.medication_1.2.0.jar" \
+"file:bundles/ont.multimedia_1.2.0.jar" \
+"file:bundles/ont.powersocket_1.2.0.jar" \
+"file:bundles/ont.profile.health_1.2.0.jar" \
+"file:bundles/ont.profile.userid_1.2.0.jar" \
+"file:bundles/ont.risk_1.2.0.jar" \
+"file:bundles/ont.water_1.2.0.jar" \
+"file:bundles/ont.weather_1.2.0.jar" \
+"file:bundles/ont.window_1.2.0.jar" \
+"file:bundles/ont.che_1.2.0.jar" \
+"file:bundles/ont.activityhub_1.2.0.jar" \
+"file:bundles/ont.profile.uipreferences_1.2.0.jar" \
+"file:bundles/ont.questionnaire_1.2.0.jar" \
+"file:bundles/ont.aalfficiency_1.2.0.jar" \
+"file:bundles/ui.dm.mobile_1.2.0.jar" \
+"file:bundles/ui.handler.gui.swing_1.2.0.jar" \
+"file:bundles/medication.manager.ui_1.2.0.jar" \
+"file:bundles/medication.manager.ont_1.2.0.SNAPSHOT.jar" \
+"file:bundles/medication.missing.services.simulation_1.2.0.jar" \
+"file:bundles/medication.manager.service_1.2.0.jar" \
+"file:bundles/medication.manager.shell.commands_1.2.0.jar"
 
 ##############################
 # System properties
