--- a/medication/medication.manager.ont/pom.xml
+++ b/medication/medication.manager.ont/pom.xml
@@ -4,12 +4,13 @@
   <parent>
     <groupId>org.universAAL.ontology</groupId>
     <artifactId>ont.pom</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.2.0</version>
     <!--
     		<relativePath>../pom</relativePath>
     -->
   </parent>
   <artifactId>medication.manager.ont</artifactId>
+  <version>1.2.0-SNAPSHOT</version>
   <name>Medication Manager ontology</name>
   <description>Medication Manager ontology</description>
   <packaging>bundle</packaging>
@@ -26,19 +27,19 @@
     </dependency>
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
-      <artifactId>mw.data.representation</artifactId>
+      <artifactId>mw.data.representation.osgi</artifactId>
     </dependency>
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
-      <artifactId>mw.bus.context</artifactId>
+      <artifactId>mw.bus.context.osgi</artifactId>
     </dependency>
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
-      <artifactId>mw.bus.ui</artifactId>
+      <artifactId>mw.bus.ui.osgi</artifactId>
     </dependency>
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
-      <artifactId>mw.bus.service</artifactId>
+      <artifactId>mw.bus.service.osgi</artifactId>
     </dependency>
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
