--- a/medication/medication.manager.service/pom.xml
+++ b/medication/medication.manager.service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>medication.manager.pom</artifactId>
-    <version>B.0.1-SNAPSHOT</version>
+    <version>C.0.1-SNAPSHOT</version>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
   <artifactId>medication.manager.service</artifactId>
@@ -17,12 +17,12 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>medication.manager.ont</artifactId>
-      <version>1.1.1-SNAPSHOT</version>
+      <version>1.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.ui</artifactId>
-      <version>B.0.1-SNAPSHOT</version>
+      <version>C.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
