--- a/medication/medication.missing.services.simulation/pom.xml
+++ b/medication/medication.missing.services.simulation/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>B.0.1-SNAPSHOT</version>
+    <version>C.0.1-SNAPSHOT</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>medication.manager.ont</artifactId>
-      <version>1.1.1-SNAPSHOT</version>
+      <version>1.2.0-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
