--- a/health/PhysicalActivityMonitorModule/app.biomedicalsensors.uiclient/pom.xml
+++ b/health/PhysicalActivityMonitorModule/app.biomedicalsensors.uiclient/pom.xml
@@ -4,20 +4,21 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.universAAL.support</groupId>
-		<artifactId>support.pom</artifactId>
-		<version>1.1.2-SNAPSHOT</version>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<artifactId>new_services.pom</artifactId>
+		<version>C.0</version>
+		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<packaging>bundle</packaging>
-	
+
 	<groupId>org.universAAL.apps</groupId>
 	<artifactId>app.biomedicalsensors.uiclient</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>C.0.1</version>
 	<name>Physical Activity Monitor Module UI Client</name>
 	<url />
 
-	<dependencies>	
+	<dependencies>
 		<!-- non-universAAL -->
 		<dependency>
 			<groupId>org.apache.felix</groupId>
@@ -26,54 +27,22 @@
 		<!-- universAAL non-ui -->
 
 		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation.osgi</artifactId>
-				<version>1.1.2-SNAPSHOT</version>
-			<type>bundle</type>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.context.osgi</artifactId>
-				<version>1.1.2-SNAPSHOT</version>
-			<type>bundle</type>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.ui.osgi</artifactId>
-				<version>1.1.2-SNAPSHOT</version>
-			<type>bundle</type>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.service.osgi</artifactId>
-				<version>1.1.2-SNAPSHOT</version>
-			<type>bundle</type>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.phWorld.core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.container.xfaces.osgi</artifactId>
-				<version>1.1.2-SNAPSHOT</version>
-			<type>bundle</type>
-		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.container.osgi</artifactId>
-				<version>1.1.2-SNAPSHOT</version>
-			<type>bundle</type>
-		</dependency>
-		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.biomedicalsensors</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>C.0.2</version>
 			<type>bundle</type>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.profile.core</artifactId>
+			<artifactId>ont.profile</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.phWorld</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.composite</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -102,18 +71,22 @@
 				<dependency>
 					<groupId>org.universAAL.apps</groupId>
 					<artifactId>app.biomedicalsensors.server</artifactId>
-					<version>1.1.1-SNAPSHOT</version>
-				</dependency>
-				<dependency>
-					<groupId>org.universAAL.ui</groupId>
-					<artifactId>ui.handler.gui</artifactId>
+					<version>1.0.0-SNAPSHOT</version>
 				</dependency>
 				<dependency>
 					<groupId>org.universAAL.ui</groupId>
 					<artifactId>ui.dm</artifactId>
 				</dependency>
+				<dependency>
+					<groupId>org.universAAL.ui</groupId>
+					<artifactId>ui.handler.gui.swing</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>org.universAAL.ui</groupId>
+					<artifactId>ui.dm.mobile</artifactId>
+				</dependency>
 			</dependencies>
 		</profile>
-	</profiles>	
-	
+	</profiles>
+
 </project>
