--- a/long_term_behav/drools.reasoner/pom.xml
+++ b/long_term_behav/drools.reasoner/pom.xml
@@ -141,11 +141,11 @@
 		<!--			<version>4.1.0.Final</version>-->
 		<!--		</dependency>-->
 
-		<!--		<dependency>-->
-		<!--			<groupId>antlr</groupId>-->
-		<!--			<artifactId>antlr</artifactId>-->
-		<!--			<version>2.7.7</version>-->
-		<!--		</dependency>-->
+<!--				<dependency>-->
+<!--					<groupId>antlr</groupId>-->
+<!--					<artifactId>antlr</artifactId>-->
+<!--					<version>2.7.7</version>-->
+<!--				</dependency>-->
 
 		<!--		<dependency>-->
 		<!--			<groupId>org.dynamicjava.osgi</groupId>-->
@@ -182,6 +182,17 @@
 		<!--	<artifactId>service.utils</artifactId>-->
 		<!--	<version>0.1.0-SNAPSHOT</version>-->
 		<!--		</dependency>-->
+		<dependency>
+			<groupId>org.eclipse.jdt</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.0-v_771</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.core</groupId>
+			<artifactId>org.eclipse.core.resources</artifactId>
+			<version>3.6.0.v20100526-0737</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
