--- a/health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/pom.xml
+++ b/health/PhysicalActivityMonitorModule/app.biomedicalsensors.server/pom.xml
@@ -22,8 +22,8 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.biomedicalsensors</artifactId>
-			<version>C.0.2</version>
 			<type>bundle</type>
+			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
