--- a/aal_eficiency/AALfficiency.test/pom.xml
+++ b/aal_eficiency/AALfficiency.test/pom.xml
@@ -34,8 +34,8 @@
 		</dependency>
 		<dependency>
 		    <groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.aalfficiency</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<artifactId>ont.aalfficiencyscores</artifactId>
+			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -50,7 +50,6 @@
 						<Bundle-Activator>org.universAAL.AALfficiencyTest.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>org.universAAL.AALfficiencyTest</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
